--- a/Styles/responsive.css
+++ b/Styles/responsive.css
@@ -4,16 +4,13 @@
   header {
     text-align: center;
     color: #000;
+    margin-bottom: 10px;
   }
 
 
   .udacity-logo {
-    position: absolute;
-    top: 25px;
-    left: 10px;
     width: 60px;
-    float: left;
-    z-index: 2;
+    top:40px;
   }
 
 
@@ -57,8 +54,9 @@
 /* Small devices (landscape phones, 576px and up) */
 
 @media screen and (min-width: 576px) {
-  .udacity-logo {
-    width: 50px;
+  header {
+    text-align: right;
+    width: 100%;
   }
 
 
@@ -135,6 +133,7 @@
     top: 60px;
     width: 130px;
   }
+
 
   .project {
     max-width: 250px;
